# plone.versioncheck

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-ci.yaml  .pre-commit-config.yaml  .travis.yml  CHANGES.md  CHANGES.rst  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  RELEASE.md  bar.cfg  baz.cfg  bootstrap.sh  buildout.cfg  foo.cfg  pyproject.toml  setup.cfg  setup.py  tox.ini  typecheck.sh
.github/workflows/: lint.yaml  release.yaml  release.yml  tests.yaml  tests.yml
buildout.d/: spam.cfg
docs/: Makefile  conf.py  index.rst
docs/API/: index.rst
docs/caching/: index.rst
docs/dependency-tracking/: index.rst
docs/parser/: index.rst
docs/source/: conf.py
src/plone/versioncheck/: __init__.py  analyser.py  buildout_parser.py  formatter.py  parser.py  pypi.py  script.py  tracking.py  utils.py
src/plone/versioncheck/tests/: test_utils.py
src/plone/versioncheck/tpl/: browser.jinja
tests/: test_analyser.py  test_formatter.py  test_parser.py  test_pypi.py  test_script.py  test_utils.py  test_version_compare.py
